syntax = "proto3";

package car.v1;
option go_package = "coolcar/car/api/gen/v1;carpb";

message CarEntity {
  string id = 1;
  Car car = 2;
}

enum CarStatus {
  CS_NOT_SPECIFIED = 0;
  LOCKED = 1;  //上锁
  UNLOCKING = 2; //开锁中
  UNLOCKED = 3;  //已开锁
  LOCKING = 4;
}

message Driver {
  string id = 1;
  string avatar_url = 2;
}

message Location {
  double latitude = 1;
  double longitude = 2;
}

message Car {
  CarStatus status = 1;
  Driver driver = 2;
  Location position = 3;
  string trip_id = 4;
}

message CreateCarReq {}

message GetCarReq {
  string id = 1;
}

message GetCarsReq {}

message GetCarsRsp {
  repeated CarEntity cars = 1;
}

message LockCarReq{
  string id = 1;
}

message LockCarRsp{}

message UnlockCarReq {
  string id = 1;
  Driver driver = 2;
  string trip_id = 3;
}

message UnlockCarRsp {}

message UpdateCarReq {
  string id = 1;
  CarStatus status = 2;
  Location position = 3;
}

message UpdateCarResponse {}

service CarService {
  rpc CreateCar (CreateCarReq) returns (CarEntity);
  rpc GetCar (GetCarReq) returns (Car);
  rpc GetCars (GetCarsReq) returns (GetCarsRsp);

  rpc LockCar (LockCarReq) returns (LockCarRsp);
  rpc UnlockCar (UnlockCarReq) returns (UnlockCarRsp);
  rpc UpdateCar (UpdateCarReq) returns (UpdateCarResponse);
}